--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
-  text-align: center;
+
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 80px;
+  background: #fff;
+  box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0 16px;
+}
+
+.header .profile {
+  margin-right: 24px;
+}
+
+/* Update .container to the following */
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 540px; /* previously 680px */
+  height: 540px;
+  background: white;
+  border-radius: 6px; /* previously 16px */
+  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.15); /* previously 0 2px 16px rgba(0, 0, 0, 0.1) */
+  margin-top: 48px; /* new CSS property */
+}
+
+html, body {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: #f8f8f8;
+  height: 100%;
+}
+
+.messages {
+  flex: 1;
+  position: relative;
+}
+
+.messages-scroller {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  overflow-y: scroll;
+}
+
+.message {
+  align-self: flex-start;
+  margin-top: 4px;
+  padding: 8px 12px;
+  max-width: 240px;
+  background: #f1f0f0;
+  border-radius: 16px;
+  font-size: 14px;
+}
+
+.message.me {
+  align-self: flex-end;
+  background: #f19e38;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.chat-bar {
+  height: 64px;
+  border-top: 1px solid #ddd;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.chat-bar form {
+  height: 100%;
+  padding: 16px;
+}
+
+.chat-bar form input {
+  width: 100%;
+  height: 32px;
+  padding: 8px 16px;
+  border: 1px solid #ddd;
+  border-radius: 16px;
+  outline: none;
+}
+
+.chat-bar form input:focus {
+  border: 1px solid #f19e38;
 }
